[metadata]
name = {name}
version = {version}
author = gregunz
author-email = mail@gregunx.io
home-page = https://github.com/gregunz/{name}
description = {description}
long-description = file: README.md
long_description_content_type = text/markdown
license-file = LICENSE
platform = any
keywords = {keywords}
classifiers = {classifiers}

[flake8]
max-line-length = 119